<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView android:text="@string/refresh_text" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtRefresh"></TextView>
    <Spinner android:id="@+id/spinnerRefresh" android:layout_width="fill_parent" android:layout_height="wrap_content"></Spinner>
    <TextView android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtTheme" android:text="@string/theme_text"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/spinnerTheme"></Spinner>
    <TextView android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtNotify" android:text="@string/notify_text"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/spinnerNotify"></Spinner>
    <TextView android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtTranslations" android:text="@string/translations_text"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/spinnerTranslations"></Spinner>
    <CheckBox android:id="@+id/cbWakeLock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/wakelock_text"></CheckBox>
    <TextView android:text="@string/text_zoom" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtTextZoom"></TextView>
    <Spinner android:id="@+id/spinnerZoom" android:layout_width="fill_parent" android:layout_height="wrap_content"></Spinner>
    
    <Button android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/btnSave"
		android:text="@string/btn_save" android:onClick="saveSettingsHandler"
		android:layout_gravity="bottom|center" android:layout_marginTop="50dp"></Button>

</LinearLayout>
</ScrollView>